finish specialist page

--- a/resources/lang/am/specialist_details.json
+++ b/resources/lang/am/specialist_details.json
@@ -7,6 +7,8 @@
     "about_specialist":"Մասնագետի մասին",
     "task_name": "Առաջադրանք - ",
     "comments": "Մեկնաբանություններ",
-    "works": "Աշխատանքներ"
+    "works": "Աշխատանքներ",
+    "title": "Մասնագետ"
+  
 
 }
