--- a/resources/lang/en/specialist_details.json
+++ b/resources/lang/en/specialist_details.json
@@ -7,6 +7,7 @@
     "about_specialist":"About specialist",
     "task_name": "Task: ",
     "comments": "Comments",
-    "works": "Works"
+    "works": "Works",
+    "title": "Specialist"
 
 }
