--- a/resources/lang/ru/specialist_details.json
+++ b/resources/lang/ru/specialist_details.json
@@ -7,6 +7,7 @@
     "about_specialist":"О специалисте",
     "task_name": "Задание: ",
     "comments": "Комментарии",
-    "works": "Работы"
+    "works": "Работы",
+    "title": "Специалист"
 
 }
