--- a/resources/lang/am/form.json
+++ b/resources/lang/am/form.json
@@ -21,7 +21,8 @@
     "save": "Պահպանել",
     "name_surname": "Անուն Ազգանուն",
     "filter": "Ֆիլտր",
-    "cleare_filter": "Չեղարկել"
+    "cleare_filter": "Չեղարկել",
+    "sending": "Ուղարկում..."
 
 
 
