--- a/resources/lang/en/form.json
+++ b/resources/lang/en/form.json
@@ -21,9 +21,8 @@
     "save": "Save",
     "name_surname": "Name surname",
     "filter": "Filter",
-    "cleare_filter": "Cleare"
-
-
+    "cleare_filter": "Cleare",
+    "sending": "Sending..."
 
 
 
