--- a/resources/lang/am/user.chat.json
+++ b/resources/lang/am/user.chat.json
@@ -1,8 +1,8 @@
 {
     "title": "Чат",
     "select_specialist": "Ընտրել այս մասնագետին",
-    "selected_specialist": "Ընտրված մասնագետ"
-
+    "selected_specialist": "Ընտրված մասնագետ",
+    "button_comment": "Գնահատել"
 
 
 }
