--- a/resources/lang/en/user.chat.json
+++ b/resources/lang/en/user.chat.json
@@ -1,6 +1,6 @@
 {
     "title": "Чат",
     "select_specialist": "Select this specialist",
-    "selected_specialist": "Selected specialist"
-
+    "selected_specialist": "Selected specialist",
+    "button_comment": "Rate"
 }
