finish contact page

--- a/resources/lang/am/contact.json
+++ b/resources/lang/am/contact.json
@@ -3,6 +3,9 @@
     "name":"Անուն",
     "email":"Էլ․ փոստ",
     "subject":"Թեմա",
-    "your_message":"Ձեր հաղորդագրությունը"
+    "your_message":"Ձեր հաղորդագրությունը",
+    "send":"Ուղարկել",
+    "here_you_can_submit_your_message":"Այստեղ դուք կարող եք ներկայացնել Ձեր հաղորդագրությունը",
+    "baghramyan_79":"Բաղրամյան 79,Հայաստան, Երևան"
 
 }
