--- a/resources/lang/ru/contact.json
+++ b/resources/lang/ru/contact.json
@@ -3,5 +3,8 @@
     "title":"Связ",
     "email":"Эл. почта",
     "subject":"Тема",
-    "your_message":"Ваше сообщение"
+    "your_message":"Ваше сообщение",
+    "send":"Отправлять",
+    "here_you_can_submit_your_message":"Здесь вы можете отправить свое сообщение.",
+    "baghramyan_79":"Баграмян 79, Армения, Ереван"
 }
