add route to specialist

--- a/resources/lang/am/contact.json
+++ b/resources/lang/am/contact.json
@@ -1,7 +1,7 @@
 {
     "title":"Կապ",
     "name":"Անուն",
-    "email":"Էլ․ փոստ",
+    "email":"Էլ․հասցե",
     "subject":"Թեմա",
     "your_message":"Ձեր հաղորդագրությունը",
     "send":"Ուղարկել",
