--- a/resources/lang/am/specialist_details.json
+++ b/resources/lang/am/specialist_details.json
@@ -3,12 +3,12 @@
     "contact_details":"Կոնտակտային տվյալներ",
     "email": "Էլ․հասցե",
     "address": "Հասցե",
-    "phone": "Հեռախոսահամար",
+    "phone": "Հեռախոս",
     "about_specialist":"Մասնագետի մասին",
     "task_name": "Առաջադրանք - ",
     "comments": "Մեկնաբանություններ",
     "works": "Աշխատանքներ",
     "title": "Մասնագետ"
-  
+
 
 }
