--- a/resources/lang/am/jobs.json
+++ b/resources/lang/am/jobs.json
@@ -4,6 +4,9 @@
     "job_type": "Աշխատանքի տեսակը",
     "remote": "Հեռավար",
     "form_name": "Անվանում, նկարագիր",
+    "showing": "Ցուցադրված է",
+    "of": "-ը",
+    "results": "արդյունքներից",
     "jobs": {
         "remote": "Հեռավար",
         "execution_time": "Կատարման ժամանակը: ",
