--- a/resources/lang/ru/jobs.json
+++ b/resources/lang/ru/jobs.json
@@ -4,6 +4,9 @@
     "job_type": "Тип работы",
     "remote": "Удаленный",
     "form_name": "Название, описание",
+    "showing": "Показано",
+    "of": "из",
+    "results": "результатов",
     "jobs": {
         "remote": "Удаленный",
         "execution_time": "Время выполнения: ",
