--- a/resources/lang/am/navbar.json
+++ b/resources/lang/am/navbar.json
@@ -5,5 +5,7 @@
     "categories": "Կատեգորիաներ",
     "contact": "Կապ մեզ հետ",
     "post_job": "Ավելացնել աշխատանք",
-    "footer": "Հեղինակային իրավունքները պաշտպանված են: Կայքը ստեղծել է "
+    "footer": "Հեղինակային իրավունքները պաշտպանված են: Կայքը ստեղծել է ",
+    "my_profile": "Իմ հաշիվը",
+    "logout": "Ելք"
 }
