--- a/resources/lang/en/navbar.json
+++ b/resources/lang/en/navbar.json
@@ -5,6 +5,8 @@
     "categories": "Categories",
     "contact": "Contact",
     "post_job": "Post Job",
-    "footer": "Copyright reserved. Site created by "
+    "footer": "Copyright reserved. Site created by ",
+    "my_profile": "My Profile",
+    "logout": "Logout"
 
 }
