--- a/resources/lang/ru/navbar.json
+++ b/resources/lang/ru/navbar.json
@@ -5,5 +5,7 @@
     "categories": "Категории",
     "contact": "Контакты",
     "post_job": "Добавить работу",
-    "footer": "Авторские права защищены. Сайт создан "
+    "footer": "Авторские права защищены. Сайт создан ",
+    "my_profile": "Мой профиль",
+    "logout": "Выход"
 }
