--- a/resources/lang/am/user.chat.json
+++ b/resources/lang/am/user.chat.json
@@ -2,7 +2,11 @@
     "title": "Чат",
     "select_specialist": "Ընտրել այս մասնագետին",
     "selected_specialist": "Ընտրված մասնագետ",
-    "button_comment": "Գնահատել"
-
+    "button_comment": "Գնահատել",
+    "h4": "Չաթեր",
+    "search_placeholder": "Որոնել հաղորդագրություններ կամ առաջադրանք",
+    "chat_default": "Ընտրեք օգտատիրոջ՝ հաղորդագրությունները ցուցադրելու համար",
+    "message_placeholder": "Մուտքագրեք հաղորդագրություն...",
+    "file_valid_count": "Կարելի է ընտրել առավելագույնը 3 ֆայլ։"
 
 }
