finish top specialist section

--- a/resources/lang/am/welcome.json
+++ b/resources/lang/am/welcome.json
@@ -41,6 +41,10 @@
     "top_category_jobs": {
         "h3": "Թոփ կատեգորիաների աշխատանքներ",
         "p": "Առավել պահանջարկ ունեցող կատեգորիաների առաջադրանքներ"
+    },
+    "top_specialist_rating": {
+        "h3":"Լավագույն մասնագետը",
+        "view_profile": "Դիտել պրոֆիլը"
     }
 
 }
