--- a/resources/lang/ru/welcome.json
+++ b/resources/lang/ru/welcome.json
@@ -40,6 +40,10 @@
     "top_category_jobs": {
         "h3": "Вакансии в Топ категориях",
         "p": "Задания в самых популярных категориях."
+    },
+    "top_specialist_rating":{
+        "h3": "Лучший специалисти",
+         "view_profile": "Просмотреть профиль"
     }
 
 }
